@@ -29,7 +29,7 @@ test hwloc-topology-convert-1.0 "node/cpu conversion, wrong#args" -setup {
     T convert
 } -cleanup {
     T destroy
-} -returnCodes error -result {wrong # args: should be "T convert ?-strict? -to_cpuset|-to_nodeset bitmap"}
+} -returnCodes error -result {wrong # args: should be "T convert option ?-strict? bitmap"}
 
 test hwloc-topology-convert-1.1 "node/cpu conversion, wrong#args" -setup {
     hwloc create T
@@ -37,40 +37,40 @@ test hwloc-topology-convert-1.1 "node/cpu conversion, wrong#args" -setup {
     T convert X
 } -cleanup {
     T destroy
-} -returnCodes error -result {wrong # args: should be "T convert ?-strict? -to_cpuset|-to_nodeset bitmap"}
+} -returnCodes error -result {wrong # args: should be "T convert option ?-strict? bitmap"}
 
 test hwloc-topology-convert-1.2 "node/cpu conversion, wrong#args" -setup {
     hwloc create T
 } -body {
-    T convert X Y Z
+    T convert 2nodeset Y Z
 } -cleanup {
     T destroy
-} -returnCodes error -result {wrong # args: should be "T convert ?-strict? -to_cpuset|-to_nodeset bitmap"}
+} -returnCodes error -result {wrong # args: should be "T convert option ?-strict? bitmap"}
 
 test hwloc-topology-convert-1.3 "node/cpu conversion, wrong#args" -setup {
     hwloc create T
 } -body {
-    T convert -strict X Y Z
+    T convert 2cpuset -strict Y Z
 } -cleanup {
     T destroy
-} -returnCodes error -result {wrong # args: should be "T convert ?-strict? -to_cpuset|-to_nodeset bitmap"}
+} -returnCodes error -result {wrong # args: should be "T convert option ?-strict? bitmap"}
 
 # - -- --- ----- -------- ------------- ---------------------
 
 test hwloc-topology-convert-2.0 "node/cpu conversion, bad option" -setup {
     hwloc create T
 } -body {
-    T convert -foo X
+    T convert foo X
 } -cleanup {
     T destroy
-} -returnCodes error -result {bad option "-foo": must be -to_cpuset or -to_nodeset}
+} -returnCodes error -result {bad option "foo": must be 2cpuset or 2nodeset}
 
 # - -- --- ----- -------- ------------- ---------------------
 
 test hwloc-topology-convert-3.0 "node/cpu conversion, bad bitmap" -setup {
     hwloc create T
 } -body {
-    T convert -to_nodeset X
+    T convert 2nodeset X
 } -cleanup {
     T destroy
 } -returnCodes error -result {Expected bitmap but got "X"}
@@ -78,7 +78,7 @@ test hwloc-topology-convert-3.0 "node/cpu conversion, bad bitmap" -setup {
 test hwloc-topology-convert-3.1 "node/cpu conversion, bad bitmap" -setup {
     hwloc create T
 } -body {
-    T convert -to_cpuset X
+    T convert 2cpuset X
 } -cleanup {
     T destroy
 } -returnCodes error -result {Expected bitmap but got "X"}
@@ -88,7 +88,7 @@ test hwloc-topology-convert-3.1 "node/cpu conversion, bad bitmap" -setup {
 test hwloc-topology-convert-4.1 "node -> cpu conversion, non-numa, empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -to_cpuset {}
+    T convert 2cpuset {}
 } -cleanup {
     T destroy
 } -result {}
@@ -96,7 +96,7 @@ test hwloc-topology-convert-4.1 "node -> cpu conversion, non-numa, empty" -setup
 test hwloc-topology-convert-4.2 "node -> cpu conversion, non-numa, non empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -to_cpuset 0
+    T convert 2cpuset 0
 } -cleanup {
     T destroy
 } -result 0-
@@ -104,7 +104,7 @@ test hwloc-topology-convert-4.2 "node -> cpu conversion, non-numa, non empty" -s
 test hwloc-topology-convert-4.3 "node -> cpu conversion, strict, non-numa, empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -strict -to_cpuset {}
+    T convert 2cpuset -strict {}
 } -cleanup {
     T destroy
 } -result {}
@@ -112,7 +112,7 @@ test hwloc-topology-convert-4.3 "node -> cpu conversion, strict, non-numa, empty
 test hwloc-topology-convert-4.4 "node -> cpu conversion, strict, non-numa, empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -strict -to_cpuset 0
+    T convert 2cpuset -strict 0
 } -cleanup {
     T destroy
 } -result {}
@@ -120,7 +120,7 @@ test hwloc-topology-convert-4.4 "node -> cpu conversion, strict, non-numa, empty
 test hwloc-topology-convert-4.5 "cpu -> node conversion, non-numa, empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -to_nodeset {}
+    T convert 2nodeset {}
 } -cleanup {
     T destroy
 } -result {}
@@ -128,7 +128,7 @@ test hwloc-topology-convert-4.5 "cpu -> node conversion, non-numa, empty" -setup
 test hwloc-topology-convert-4.6 "cpu -> node conversion, non-numa, not empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -to_nodeset 0
+    T convert 2nodeset 0
 } -cleanup {
     T destroy
 } -result 0-
@@ -136,7 +136,7 @@ test hwloc-topology-convert-4.6 "cpu -> node conversion, non-numa, not empty" -s
 test hwloc-topology-convert-4.7 "cpu -> node conversion, strict, non-numa, empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -strict -to_nodeset {}
+    T convert 2nodeset -strict {}
 } -cleanup {
     T destroy
 } -result {}
@@ -144,7 +144,7 @@ test hwloc-topology-convert-4.7 "cpu -> node conversion, strict, non-numa, empty
 test hwloc-topology-convert-4.8 "cpu -> node conversion, strict, non-numa, not empty" -setup {
     hwloc create T -synthetic pu:4
 } -body {
-    T convert -strict -to_nodeset 0
+    T convert 2nodeset -strict 0
 } -cleanup {
     T destroy
 } -result {}
@@ -156,7 +156,7 @@ test hwloc-topology-convert-4.8 "cpu -> node conversion, strict, non-numa, not e
 test hwloc-topology-convert-5.1 "node -> cpu conversion, numa, empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -to_cpuset {}
+    T convert 2cpuset {}
 } -cleanup {
     T destroy
 } -result {}
@@ -164,7 +164,7 @@ test hwloc-topology-convert-5.1 "node -> cpu conversion, numa, empty" -setup {
 test hwloc-topology-convert-5.2 "node -> cpu conversion, numa, non empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -to_cpuset 0
+    T convert 2cpuset 0
 } -cleanup {
     T destroy
 } -result 0-3
@@ -172,7 +172,7 @@ test hwloc-topology-convert-5.2 "node -> cpu conversion, numa, non empty" -setup
 test hwloc-topology-convert-5.3 "node -> cpu conversion, strict, numa, empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -strict -to_cpuset {}
+    T convert 2cpuset -strict {}
 } -cleanup {
     T destroy
 } -result {}
@@ -180,7 +180,7 @@ test hwloc-topology-convert-5.3 "node -> cpu conversion, strict, numa, empty" -s
 test hwloc-topology-convert-5.4 "node -> cpu conversion, strict, numa, empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -strict -to_cpuset 0
+    T convert 2cpuset -strict 0
 } -cleanup {
     T destroy
 } -result 0-3
@@ -188,7 +188,7 @@ test hwloc-topology-convert-5.4 "node -> cpu conversion, strict, numa, empty" -s
 test hwloc-topology-convert-5.5 "cpu -> node conversion, numa, empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -to_nodeset {}
+    T convert 2nodeset {}
 } -cleanup {
     T destroy
 } -result {}
@@ -196,7 +196,7 @@ test hwloc-topology-convert-5.5 "cpu -> node conversion, numa, empty" -setup {
 test hwloc-topology-convert-5.6 "cpu -> node conversion, numa, not empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -to_nodeset 0
+    T convert 2nodeset 0
 } -cleanup {
     T destroy
 } -result 0
@@ -204,7 +204,7 @@ test hwloc-topology-convert-5.6 "cpu -> node conversion, numa, not empty" -setup
 test hwloc-topology-convert-5.7 "cpu -> node conversion, strict, numa, empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -strict -to_nodeset {}
+    T convert 2nodeset -strict {}
 } -cleanup {
     T destroy
 } -result {}
@@ -212,7 +212,7 @@ test hwloc-topology-convert-5.7 "cpu -> node conversion, strict, numa, empty" -s
 test hwloc-topology-convert-5.8 "cpu -> node conversion, strict, numa, not empty" -setup {
     hwloc create T -synthetic {node:3 pu:4}
 } -body {
-    T convert -strict -to_nodeset 0
+    T convert 2nodeset -strict 0
 } -cleanup {
     T destroy
 } -result 0
