@@ -1,3 +1,9 @@
+2011-10-03  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/topology.c: [Issue 5]: Reworked "topology convert",
+	* tests/topology_convert.test: changed -to_ options into
+	* doc/instance.inc: methods. Updated testsuite and documentation.
+
 2011-09-29  Andreas Kupries  <andreask@activestate.com>
 
 	* generic/hwloc.c: [Issue 3]: Changed the -set_xxx options of
